[package]
name = "tracing-datadog-macros"
version = "0.0.1"
edition = "2021"

description = "Collection of convenience macros to use with Datadog tracing"
keywords = ["datadog", "tracing"]
categories = ["development-tools::profiling"]
repository = "https://github.com/baz-scm/tracing-datadog-macros"
readme = "README.md"
license = "Apache-2.0"

authors = ["Baz"]

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "proc-macro"] }
tracing-attributes = { git = "https://github.com/baz-scm/tracing.git", branch = "v0.1.x" }

[dev-dependencies]
rstest = "0.18.2"
