[package]
name = "tracing-datadog-macros"
version = "0.0.1"
edition = "2021"
rust-version = "1.65" # MSRV

description = "Collection of convenience macros to use with Datadog tracing"
keywords = ["datadog", "tracing"]
categories = ["development-tools::profiling"]
repository = "https://github.com/baz-scm/tracing-datadog-macros"
readme = "README.md"
license = "Apache-2.0"

authors = ["Baz"]

[lib]
doctest = false
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.11"

[dev-dependencies]
rstest = "0.18.2" # 0.19+ needs Rust 1.67+
